--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,5 +3,8 @@ version: '0.1.{build}'
 platform: Any CPU
 image: Visual Studio 2017
 
+before_build:
+  - nuget restore
+
 build:
   verbosity: minimal
