--- a/Matrix/Matrix/Matrix.csproj
+++ b/Matrix/Matrix/Matrix.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>netstandard2.0;net45;net452</TargetFrameworks>
     <AssemblyName>NMatrix</AssemblyName>
     <RootNamespace>System.Numerics</RootNamespace>
-    <Version>0.1.0</Version>
+    <Version>0.2.0</Version>
     <Authors>vlasovsv</Authors>
     <Company />
     <RepositoryUrl>https://github.com/vlasovsv/Matrix</RepositoryUrl>
@@ -12,6 +12,7 @@
     <PackageLicenseUrl>https://github.com/vlasovsv/Matrix/blob/master/LICENSE</PackageLicenseUrl>
     <Description>General purpose matrix library.</Description>
     <PackageTags>matrix detrerminant inverse transpose</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
