Added Cholesky decomposition. Added tests for Cholesky decomposition.

--- a/Matrix/Matrix.Tests/Matrix.Tests.csproj
+++ b/Matrix/Matrix.Tests/Matrix.Tests.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyName>NMatrix.Tests</AssemblyName>
+
+    <RootNamespace>NMatrix.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
