Configured xml documentation. Added xml doc to ignore.

--- a/Matrix/Matrix/Matrix.csproj
+++ b/Matrix/Matrix/Matrix.csproj
@@ -13,6 +13,7 @@
     <Description>General purpose matrix library.</Description>
     <PackageTags>matrix detrerminant inverse transpose</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
 </Project>
