--- a/Matrix/Matrix/Matrix.csproj
+++ b/Matrix/Matrix/Matrix.csproj
@@ -1,15 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45;net452</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>8</LangVersion>
     <AssemblyName>NMatrix</AssemblyName>
     <RootNamespace>NMatrix</RootNamespace>
-    <Version>0.3.0</Version>
+    <Version>0.4.0</Version>
     <Authors>vlasovsv</Authors>
     <Company />
     <RepositoryUrl>https://github.com/vlasovsv/Matrix</RepositoryUrl>
     <PackageProjectUrl>https://github.com/vlasovsv/Matrix</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/vlasovsv/Matrix/blob/master/LICENSE</PackageLicenseUrl>
+    <License>Apache-2.0</License>
     <Description>General purpose matrix library.</Description>
     <PackageTags>matrix detrerminant inverse transpose</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
